working on transitions to improve scrolling, visibilities now more correct

--- a/home/static/css/home.less
+++ b/home/static/css/home.less
@@ -29,6 +29,7 @@
     h1.transition-link:hover { border-color: rgba(0,0,0,1); color: black; }
     div { position: absolute; box-shadow: none; }
     img { width: 150px; height: 100px; box-shadow: none; position: fixed; }
+
     .top { top: -10%; left: 45%; visibility: hidden;
       h1.transition-link { margin: 0; margin-left: 0.9em; margin-top: 2.3em; }
     }
@@ -46,14 +47,14 @@
       h1.transition-link { margin: 0; margin-left: 9px; padding: 0 0 0 0; }
       img { transform: rotate(180deg);}
     }
-    #next, #prev { visibility: hidden; }
+    .next, .prev, .home { visibility: hidden; }
   }
 }
 
 .page-content { left: 40%; top: 30%; position: fixed; width: 20em;}
 
 .pt-page-1 {
-    background-image: url('../images/TurkishMarbledPaper.jpg');
+    background-image: url('http://i.imgur.com/m4lI6NS.jpg');
     background-repeat: no-repeat;
     background-size: cover;
   .header { text-align: center; margin-top: 5em;
@@ -62,19 +63,19 @@
   }
 }
 
-.pt-page-1 {
+.pt-page-10 {
     background-image: url('http://i.imgur.com/0X2Seqq.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.pt-page-3 {
+.pt-page-20 {
     background-image: url('http://i.imgur.com/x3DPfaH.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.pt-page-4 {
+.pt-page-30 {
     background-image: url('http://i.imgur.com/3Eu79zO.jpg');
     background-repeat: no-repeat;
     background-size: cover;
